# voxl

./: .gitignore  Cargo.toml
assets/: CREDIT.md
src/: camera.rs  chunk.rs  gui.rs  lib.rs  main.rs  shader.rs  sprite.rs  voxel.rs
src/shaders/: shadow.frag  shadow.vert  voxel.frag  voxel.vert
