[package]
name = "voxl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["glazer/hot-reload", "glam/glam-assert"]

[dependencies]
glazer = { path = "../blaze/crates/glazer", default-features = false, features = [
	"opengl",
] }
glam = "0.30"
egui_glow = { version = "0.33.2", features = ["winit"] }
egui = "0.33.2"
image = { version = "0.25.9", default-features = false, features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.100"
